#39: Hero component vertical alignment issue fixed.

--- a/source/sass/utilities/_alignment.scss
+++ b/source/sass/utilities/_alignment.scss
@@ -2,6 +2,12 @@
  * Alignment (utilities/_alignment.scss)
  */
 
+/* ----- Yahoo! Mail alignment fix ----- */
+.yahoo-center {
+	margin-right: auto;
+	margin-left: auto;
+}
+
 /* ----- Text alignment ----- */
 .align-left {
 	text-align: left;
